<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/postsFragment"
        android:icon="@drawable/ic_nav_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/myPostsFragment"
        android:icon="@drawable/ic_nav_my_posts"
        android:title="@string/nav_my_posts" />
    <item
        android:id="@+id/bookSearchFragment"
        android:icon="@drawable/ic_nav_new"
        android:title="@string/nav_new" />
    <item
        android:id="@+id/myListsFragment"
        android:icon="@drawable/ic_nav_lists"
        android:title="@string/nav_my_lists" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
